add and delete todo added

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "@types/react-native": "^0.73.0",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
